changes before making it public (#2)
* Major commit

* Lots of things added
