# src/controllers/feedback.controller.js
@@ -1,6 +1,33 @@
 const { feedbackService } = require('../services');
 const { successUtils } = require('../utils');
-const { addFeedbackValidation } = require('../validations');
+const { getId, getListValidation, addFeedbackValidation } = require('../validations');
+
+const getFeedbackCount = async (req, res, next) => {
+  try {
+    const validatedReqQuery = await getListValidation.validate(req.query);
+    const count = await feedbackService.getFeedbackCount({
+      account_id: req.headers.account_id,
+      ...validatedReqQuery,
+    });
+    return successUtils.handler({ count }, req, res);
+  } catch (error) {
+    return next(error);
+  }
+};
+
+const getFeedbackList = async (req, res, next) => {
+  try {
+    const validatedReqQuery = await getListValidation.validate(req.query);
+    const feedbacks = await feedbackService.getFeedbackList({
+      account_id: req.headers.account_id,
+      ...validatedReqQuery,
+    });
+    return successUtils.handler({ feedbacks }, req, res);
+  } catch (error) {
+    return next(error);
+  }
+};
+
 
 const addFeedback = async (req, res, next) => {
   try {
@@ -15,6 +42,23 @@ const addFeedback = async (req, res, next) => {
   }
 };
 
+const getFeedback = async (req, res, next) => {
+  const { feedbackId } = req.params;
+  try {
+    const validatedFeedbackId = await getId.validate(feedbackId);
+    const feedback = await feedbackService.getFeedback({
+      account_id: req.headers.account_id,
+      feedback_id: validatedFeedbackId,
+    });
+    return successUtils.handler({ feedback }, req, res);
+  } catch (error) {
+    return next(error);
+  }
+};
+
 module.exports = {
+  getFeedbackCount,
+  getFeedbackList,
   addFeedback,
+  getFeedback,
 };
